# netatmo-retrieve

./: .gitignore  LICENSE  README.md  env.sh  netatmodata.py  pyproject.toml  retrieve-data.py
